# Rendering-Starter-Template

./: .gitignore  CMakeLists.txt
res/: fragment.glsl  fragment3D.glsl  fragmentOBJ.glsl  fragmentScreen.glsl  fragmentScreen3D.glsl  fragmentUV.glsl  vertex.glsl  vertex3D.glsl  vertexOBJ.glsl  vertexScreen.glsl  vertexScreen3D.glsl  vertexUV.glsl
src/: MainOBJ.cpp  main.cpp  main2D.cpp  main3D.cpp  mainUV.cpp
